# ragback

./: .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README-EN.md  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
cli/: add_facts.py  interact.py
src/backend/: run.py
src/backend/application/services/: embedder.py  llm.py  prompt.py  retrieval.py  vector_storage.py
src/backend/application/use_cases/: chat.py
src/backend/application/value_objects/: generation_parameters.py  search_result.py
src/backend/application/value_objects/prompts_data/: rag.py
src/backend/domain/entities/: character.py  fact.py  message.py
src/backend/domain/value_objects/: chat_actor.py
src/backend/infrastructure/: di.py
src/backend/infrastructure/configuration/: config.py
src/backend/infrastructure/configuration/inner/: api.py  embedder.py  llm.py  rag.py  vector_storage.py
src/backend/integrations/services/embedder/: cohere.py
src/backend/integrations/services/llm/: openai.py
src/backend/integrations/services/prompts/: mako.py  rag.py
src/backend/integrations/services/vector_storage/: qdrant.py
src/backend/presentation/api/models/: chat.py  health.py
src/backend/presentation/api/routes/: registry.py
src/backend/presentation/api/routes/general/: health.py  registry.py
src/backend/presentation/api/routes/v1/: chat.py  registry.py
static/: character.json  user.json  user_facts.txt
static/templates/: chat_rag.mako
